@@ -288,7 +288,9 @@ New Features
 
 73. SOLR-1156: Sort TermsComponent results by frequency (Matt Weber via yonik)
 
-74. SOLR-1384 : load core properties from a properties file (noble) 
+74. SOLR-1335 : load core properties from a properties file (noble)
+
+75. SOLR-1385 : Add an 'enable' attribute to all plugins  (noble)
 
 Optimizations
 ----------------------
